--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@polymarket/clob-client": "^4.11.0",
         "better-sqlite3": "^11.3.0",
         "csv-parser": "^3.0.0",
         "discord.js": "^14.16.3",
